@@ -585,7 +585,7 @@ public class HibernateORMSession implements ORMSession {
 			return query.list();
 		}
 		// update
-		return new Double(query.executeUpdate());
+		return Double.valueOf(query.executeUpdate());
 	}
 
 	private Object uniqueResult(Query<?> query) throws PageException {
